<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".pages.Game">

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="Listen Well"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/arrowGame"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="The word"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowGame" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:contentDescription="@string/press_to_output_voice"
        app:fabSize="normal"
        app:layout_constraintStart_toEndOf="@+id/word"
        app:layout_constraintTop_toBottomOf="@+id/arrowGame"
        app:srcCompat="@drawable/baseline_volume_up_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/arrowGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
        app:tint="@color/brown"
        android:contentDescription="@string/press_to_go_back"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewGame"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineGame">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textDefinition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Definition"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/arrowGame" />

                    <Button
                        android:id="@+id/definition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/blue"
                        android:text="@string/definition"
                        android:textAlignment="textStart"
                        android:textColorLink="@color/blue"
                        app:cornerRadius="10dp" />

                    <TextView
                        android:id="@+id/textFeedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Feedback"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/arrowGame" />

                    <Button
                        android:id="@+id/feedback"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/blue"
                        android:text="feedback"
                        android:textAlignment="textStart"
                        android:textColorLink="@color/blue"
                        app:cornerRadius="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:orientation="horizontal"></LinearLayout>

                </LinearLayout>
            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/microphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:baselineAlignBottom="true"
                android:clickable="true"
                android:contentDescription="@string/press_to_go_input_voice"
                android:focusable="true"
                android:foregroundGravity="center"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:flow_verticalAlign="center"
                app:layout_constraintBottom_toTopOf="@+id/microphoneState"
                app:layout_constraintEnd_toEndOf="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/baseline_mic_24" />

            <TextView
                android:id="@+id/microphoneState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="Recording Status"
                app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>